<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ming.dialectspeak.Setting"
    android:background="@color/material_grey_100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_choice_selector"
        android:id="@+id/layout_setting_1">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/imageView2"
            android:src="@mipmap/entrance_icon_for_notice"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@mipmap/nearby_arrow_down"

            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvspeed"
            android:id="@+id/tv_speed"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_marginLeft="8dp"
            android:textSize="13sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/tv_normal"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:id="@+id/view_setting_1"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/back_top"
        android:layout_height="50dp"
        android:id="@+id/layout_setting_1_1"
        android:visibility="gone">


        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarspeed"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="8dp"
            android:max="100"
            android:progress="50"
            android:indeterminate="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tv_setting_speed"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/seekBarspeed"
            android:layout_toEndOf="@+id/seekBarspeed"
            android:textColor="@color/colorAccent"
            android:text="@string/tvpeedset"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/btn_choice_selector"
        android:layout_height="50dp"
        android:id="@+id/layout_setting_2">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/imageView22"
            android:src="@mipmap/waiting_time"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView33"
            android:src="@mipmap/nearby_arrow_down"

            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waitingtime"
            android:id="@+id/tv_speed2"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView22"
            android:layout_toEndOf="@+id/imageView22"
            android:layout_marginLeft="8dp"
            android:textSize="13sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/tv_normal"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:id="@+id/view_setting_2"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/back_top"
        android:layout_height="50dp"
        android:id="@+id/layout_setting_1_2"
        android:visibility="gone">


        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBartime"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="8dp"
            android:max="15"
            android:progress="5"
            android:indeterminate="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tv_setting_time"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/seekBartime"
            android:layout_toEndOf="@+id/seekBartime"
            android:textColor="@color/colorAccent"
            android:text="@string/tvpeedset"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/btn_choice_selector"
        android:layout_height="50dp"
        android:id="@+id/layout_setting_3">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/imageView_setting_3"
            android:src="@mipmap/recommend_highlight"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharefriend"
            android:id="@+id/tv_speed_3"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView_setting_3"
            android:layout_toEndOf="@+id/imageView_setting_3"
            android:layout_marginLeft="8dp"
            android:textSize="13sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/tv_normal"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/btn_choice_selector"
        android:layout_height="50dp"
        android:id="@+id/layout_setting_4">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/imageView_setting_4"
            android:src="@mipmap/update_verson"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkupdate"
            android:id="@+id/tv_speed_4"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView_setting_4"
            android:layout_toEndOf="@+id/imageView_setting_4"
            android:layout_marginLeft="8dp"
            android:textSize="13sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/tv_normal"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/btn_choice_selector"
        android:layout_height="50dp"
        android:id="@+id/layout_setting_5">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/imageView_setting_5"
            android:src="@mipmap/voice_intro_select"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:id="@+id/tv_speed_5"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView_setting_5"
            android:layout_toEndOf="@+id/imageView_setting_5"
            android:layout_marginLeft="8dp"
            android:textSize="13sp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_about_content">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/img_setting_bottom"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/tv_normal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weixin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textColor="@color/tv_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="语音服务:科大讯飞"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="@color/tv_normal"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开发者:坦克"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="@color/tv_normal"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>
